--- a/uknown_fw8224.banks.json
+++ b/uknown_fw8224.banks.json
@@ -1,25 +1,25 @@
 {
 	"_id": "uknown_fw8224.banks",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "uknown_fw8224.banks",
 	"sector": "K_7825",
 	"sec_level": 4,
 	"date_added": 1572210734365,
-	"last_scraped": 1572288719636,
+	"last_scraped": 1572290961039,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1572210734365
 		}
 	],
-	"next_scrape": 1572328618532,
+	"next_scrape": 1572336397641,
 	"category": "coin_flipper",
-	"last_update": 1572288719636,
+	"last_update": 1572290961039,
 	"output": [
 		{
 			"args": {},
-			"calls": 451239,
+			"calls": 464814,
 			"base": "Flip a coin! heads wins, tails loses. {flip:true}",
 			"fragments": [
 				"t Mal",
@@ -63,6 +63,6 @@
 			]
 		}
 	],
-	"updt": 1572286573145,
-	"edit": 44
+	"updt": 1572288828377,
+	"edit": 45
 }
