--- a/uknown_jau9wq.hitlist.json
+++ b/uknown_jau9wq.hitlist.json
@@ -1,26 +1,26 @@
 {
 	"_id": "uknown_jau9wq.hitlist",
 	"type": "fragment",
-	"mode": "fresh",
+	"mode": "skip",
 	"script": "uknown_jau9wq.hitlist",
 	"sector": "SPC_6549",
 	"sec_level": 4,
 	"date_added": 1572290049044,
-	"last_scraped": 1572290781026,
+	"last_scraped": 1572291103497,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1572290049044
 		}
 	],
-	"scrape_ct": 9,
-	"next_scrape": 1572290841026,
+	"scrape_ct": 2,
+	"next_scrape": 1572291163497,
 	"category": "plant_sim",
-	"last_update": 1572290781026,
+	"last_update": 1572291103497,
 	"output": [
 		{
 			"args": {},
-			"calls": 7879,
+			"calls": 11619,
 			"base": "c:\"b8gvxm\" d:\"<f l n s w>\"\n\n\n\n\n\n                 \n                 .\n                 ",
 			"fragments": [
 				"ng th",
@@ -55,6 +55,6 @@
 			]
 		}
 	],
-	"updt": 1572290634542,
-	"edit": 3
+	"updt": 1572291083666,
+	"edit": 5
 }
