--- a/unknown_0jkcl8.db.json
+++ b/unknown_0jkcl8.db.json
@@ -1,25 +1,25 @@
 {
 	"_id": "unknown_0jkcl8.db",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "unknown_0jkcl8.db",
 	"sector": "VNP_3268",
 	"sec_level": 4,
 	"date_added": 1571754786387,
-	"last_scraped": 1572294398421,
+	"last_scraped": 1572296650757,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1571754786387
 		}
 	],
-	"next_scrape": 1572341128674,
+	"next_scrape": 1572339701777,
 	"category": "dice_roller",
-	"last_update": 1572294398421,
+	"last_update": 1572296650757,
 	"output": [
 		{
 			"args": {},
-			"calls": 2034969,
+			"calls": 2048472,
 			"base": "Roll the dice!(tm)\n\nbeat the house's roll to win! {roll:true}",
 			"fragments": [
 				"predi",
@@ -57,8 +57,8 @@
 			]
 		}
 	],
-	"updt": 1572292436013,
-	"edit": 240,
+	"updt": 1572294466857,
+	"edit": 241,
 	"identified": [
 		{
 			"document": "NOT FOUND",
