--- a/uknown_28mx3w.bigbot.json
+++ b/uknown_28mx3w.bigbot.json
@@ -6,23 +6,22 @@
 	"sector": "VNP_8418",
 	"sec_level": 4,
 	"date_added": 1572057403473,
-	"last_scraped": 1572294668635,
+	"last_scraped": 1572297020606,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1572057403473
 		}
 	],
-	"next_scrape": 1572336982945,
+	"next_scrape": 1572342427138,
 	"category": "coin_flipper",
-	"last_update": 1572294668635,
+	"last_update": 1572297020606,
 	"output": [
 		{
 			"args": {},
-			"calls": 987441,
+			"calls": 996699,
 			"base": "Flip a coin! heads wins, tails loses. {flip:true}",
 			"fragments": [
-				"value",
 				" seco",
 				"he val",
 				"compat",
@@ -40,8 +39,10 @@
 				"2093 fo",
 				"2 I've ",
 				"ve adjus",
+				"value\\n2",
 				"ted the ",
 				"sted the",
+				"or human",
 				"ompatibi",
 				"man comp",
 				"lue\\n209",
@@ -85,6 +86,6 @@
 			]
 		}
 	],
-	"updt": 1572292662252,
-	"edit": 111
+	"updt": 1572294691223,
+	"edit": 112
 }
