--- a/uknown_28mx3w.bigbot.json
+++ b/uknown_28mx3w.bigbot.json
@@ -6,20 +6,20 @@
 	"sector": "VNP_8418",
 	"sec_level": 4,
 	"date_added": 1572057403473,
-	"last_scraped": 1572297020606,
+	"last_scraped": 1572299644565,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1572057403473
 		}
 	],
-	"next_scrape": 1572342427138,
+	"next_scrape": 1572341498167,
 	"category": "coin_flipper",
-	"last_update": 1572297020606,
+	"last_update": 1572299644565,
 	"output": [
 		{
 			"args": {},
-			"calls": 996699,
+			"calls": 1001640,
 			"base": "Flip a coin! heads wins, tails loses. {flip:true}",
 			"fragments": [
 				" seco",
@@ -86,6 +86,6 @@
 			]
 		}
 	],
-	"updt": 1572294691223,
-	"edit": 112
+	"updt": 1572297171517,
+	"edit": 113
 }
