--- a/uknown_28mx3w.bigbot.json
+++ b/uknown_28mx3w.bigbot.json
@@ -6,36 +6,33 @@
 	"sector": "VNP_8418",
 	"sec_level": 4,
 	"date_added": 1572057403473,
-	"last_scraped": 1572299644565,
+	"last_scraped": 1572301865309,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1572057403473
 		}
 	],
-	"next_scrape": 1572341498167,
+	"next_scrape": 1572342627735,
 	"category": "coin_flipper",
-	"last_update": 1572299644565,
+	"last_update": 1572301865309,
 	"output": [
 		{
 			"args": {},
-			"calls": 1001640,
+			"calls": 1009548,
 			"base": "Flip a coin! heads wins, tails loses. {flip:true}",
 			"fragments": [
+				"091 W",
 				" seco",
 				"he val",
 				"compat",
-				"\\n2093",
-				"?\\n209",
 				" the v",
 				"y 5 sec",
 				"uman co",
 				"seconds",
-				"nds?\\n2",
+				"s?\\n209",
 				"hy 5 se",
 				"human c",
-				"ds?\\n20",
-				"adjuste",
 				"2093 fo",
 				"2 I've ",
 				"ve adjus",
@@ -44,17 +41,21 @@
 				"sted the",
 				"or human",
 				"ompatibi",
+				"nds?\\n20",
 				"man comp",
 				"lue\\n209",
 				"for huma",
 				"conds?\\n",
 				"an compa",
+				"alue\\n20",
+				"adjusted",
 				"91 Why 5",
 				"3 for hu",
 				"'ve adju",
 				" for hum",
 				" Why 5 s",
-				" I've ad"
+				" I've ad",
+				"e\\n2093 f"
 			],
 			"hits": [
 				{
@@ -86,6 +87,6 @@
 			]
 		}
 	],
-	"updt": 1572297171517,
-	"edit": 113
+	"updt": 1572299649882,
+	"edit": 114
 }
