--- a/uknown_28mx3w.bigbot.json
+++ b/uknown_28mx3w.bigbot.json
@@ -6,42 +6,41 @@
 	"sector": "VNP_8418",
 	"sec_level": 4,
 	"date_added": 1572057403473,
-	"last_scraped": 1572303876594,
+	"last_scraped": 1572305928325,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1572057403473
 		}
 	],
-	"next_scrape": 1572345521930,
+	"next_scrape": 1572345691010,
 	"category": "coin_flipper",
-	"last_update": 1572303876594,
+	"last_update": 1572305928325,
 	"output": [
 		{
 			"args": {},
-			"calls": 1021816,
+			"calls": 1028917,
 			"base": "Flip a coin! heads wins, tails loses. {flip:true}",
 			"fragments": [
+				"2092 ",
 				"091 W",
-				" seco",
 				"he val",
 				"compat",
 				" the v",
 				"y 5 sec",
 				"uman co",
-				"seconds",
-				"s?\\n209",
 				"hy 5 se",
 				"human c",
+				"?\\n2092",
 				"2093 fo",
 				"2 I've ",
 				"ve adjus",
 				"value\\n2",
 				"ted the ",
 				"sted the",
+				"seconds?",
 				"or human",
 				"ompatibi",
-				"nds?\\n20",
 				"man comp",
 				"lue\\n209",
 				"for huma",
@@ -55,6 +54,8 @@
 				" for hum",
 				" Why 5 s",
 				" I've ad",
+				" 5 secon",
+				"nds?\\n209",
 				"e\\n2093 f"
 			],
 			"hits": [
@@ -87,6 +88,6 @@
 			]
 		}
 	],
-	"updt": 1572301906207,
-	"edit": 115
+	"updt": 1572303932752,
+	"edit": 116
 }
