--- a/uknown_28mx3w.bigbot.json
+++ b/uknown_28mx3w.bigbot.json
@@ -6,31 +6,32 @@
 	"sector": "VNP_8418",
 	"sec_level": 4,
 	"date_added": 1572057403473,
-	"last_scraped": 1572308018211,
+	"last_scraped": 1572310100587,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1572057403473
 		}
 	],
-	"next_scrape": 1572350058130,
+	"next_scrape": 1572356630958,
 	"category": "coin_flipper",
-	"last_update": 1572308018211,
+	"last_update": 1572310100587,
 	"output": [
 		{
 			"args": {},
-			"calls": 1044866,
+			"calls": 1057746,
 			"base": "Flip a coin! heads wins, tails loses. {flip:true}",
 			"fragments": [
-				"2092 ",
 				"091 W",
 				"he val",
 				"compat",
+				"2092 I",
 				" the v",
 				"y 5 sec",
 				"uman co",
 				"hy 5 se",
 				"human c",
+				"e value",
 				"?\\n2092",
 				"2093 fo",
 				"2 I've ",
@@ -39,6 +40,7 @@
 				"ted the ",
 				"sted the",
 				"seconds?",
+				"r human ",
 				"or human",
 				"ompatibi",
 				"man comp",
@@ -88,6 +90,6 @@
 			]
 		}
 	],
-	"updt": 1572305963251,
-	"edit": 117
+	"updt": 1572308215100,
+	"edit": 118
 }
