--- a/uknown_28mx3w.bigbot.json
+++ b/uknown_28mx3w.bigbot.json
@@ -6,26 +6,24 @@
 	"sector": "VNP_8418",
 	"sec_level": 4,
 	"date_added": 1572057403473,
-	"last_scraped": 1572310100587,
+	"last_scraped": 1572312109005,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1572057403473
 		}
 	],
-	"next_scrape": 1572356630958,
+	"next_scrape": 1572353025803,
 	"category": "coin_flipper",
-	"last_update": 1572310100587,
+	"last_update": 1572312109005,
 	"output": [
 		{
 			"args": {},
-			"calls": 1057746,
+			"calls": 1065600,
 			"base": "Flip a coin! heads wins, tails loses. {flip:true}",
 			"fragments": [
 				"091 W",
 				"he val",
-				"compat",
-				"2092 I",
 				" the v",
 				"y 5 sec",
 				"uman co",
@@ -52,8 +50,11 @@
 				"adjusted",
 				"91 Why 5",
 				"3 for hu",
+				"2092 I'v",
+				"093 for ",
 				"'ve adju",
 				" for hum",
+				" compati",
 				" Why 5 s",
 				" I've ad",
 				" 5 secon",
@@ -90,6 +91,6 @@
 			]
 		}
 	],
-	"updt": 1572308215100,
-	"edit": 118
+	"updt": 1572310240897,
+	"edit": 119
 }
