--- a/uknown_28mx3w.bigbot.json
+++ b/uknown_28mx3w.bigbot.json
@@ -6,33 +6,34 @@
 	"sector": "VNP_8418",
 	"sec_level": 4,
 	"date_added": 1572057403473,
-	"last_scraped": 1572312109005,
+	"last_scraped": 1572314147353,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1572057403473
 		}
 	],
-	"next_scrape": 1572353025803,
+	"next_scrape": 1572359017694,
 	"category": "coin_flipper",
-	"last_update": 1572312109005,
+	"last_update": 1572314147353,
 	"output": [
 		{
 			"args": {},
-			"calls": 1065600,
+			"calls": 1073986,
 			"base": "Flip a coin! heads wins, tails loses. {flip:true}",
 			"fragments": [
 				"091 W",
 				"he val",
-				" the v",
-				"y 5 sec",
 				"uman co",
 				"hy 5 se",
 				"human c",
 				"e value",
 				"?\\n2092",
+				"92 I've",
 				"2093 fo",
 				"2 I've ",
+				" the va",
+				"y 5 seco",
 				"ve adjus",
 				"value\\n2",
 				"ted the ",
@@ -48,6 +49,7 @@
 				"an compa",
 				"alue\\n20",
 				"adjusted",
+				"93 for h",
 				"91 Why 5",
 				"3 for hu",
 				"2092 I'v",
@@ -91,6 +93,6 @@
 			]
 		}
 	],
-	"updt": 1572310240897,
-	"edit": 119
+	"updt": 1572312272652,
+	"edit": 120
 }
