--- a/uknown_28mx3w.bigbot.json
+++ b/uknown_28mx3w.bigbot.json
@@ -1,7 +1,7 @@
 {
 	"_id": "uknown_28mx3w.bigbot",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "dead",
 	"script": "uknown_28mx3w.bigbot",
 	"sector": "VNP_8418",
 	"sec_level": 4,
@@ -11,6 +11,10 @@
 		{
 			"type": "added",
 			"when": 1572057403473
+		},
+		{
+			"type": "died",
+			"when": 1572315806812
 		}
 	],
 	"next_scrape": 1572359017694,
@@ -93,6 +97,6 @@
 			]
 		}
 	],
-	"updt": 1572312272652,
-	"edit": 120
+	"updt": 1572314304509,
+	"edit": 121
 }
