--- a/uknown_28mx3w.bot_scam_do_not_run.json
+++ b/uknown_28mx3w.bot_scam_do_not_run.json
@@ -1,7 +1,7 @@
 {
 	"_id": "uknown_28mx3w.bot_scam_do_not_run",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "dead",
 	"script": "uknown_28mx3w.bot_scam_do_not_run",
 	"sector": "K_3804",
 	"sec_level": 4,
@@ -11,6 +11,10 @@
 		{
 			"type": "added",
 			"when": 1564555767749
+		},
+		{
+			"type": "died",
+			"when": 1572315750384
 		}
 	],
 	"next_scrape": 1570943913981,
@@ -159,6 +163,6 @@
 			]
 		}
 	],
-	"updt": 1570903714068,
-	"edit": 298
+	"updt": 1570903939447,
+	"edit": 299
 }
