--- a/unknown_isjxk0.db.json
+++ b/unknown_isjxk0.db.json
@@ -1,26 +1,25 @@
 {
 	"_id": "unknown_isjxk0.db",
 	"type": "fragment",
-	"mode": "fresh",
+	"mode": "npc",
 	"script": "unknown_isjxk0.db",
 	"sector": "K_7503",
 	"sec_level": 4,
 	"date_added": 1572314539421,
-	"last_scraped": 1572315141869,
+	"last_scraped": 1572315746017,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1572314539421
 		}
 	],
-	"scrape_ct": 9,
-	"next_scrape": 1572315201869,
+	"next_scrape": 1572359779475,
 	"category": "coin_flipper",
-	"last_update": 1572315141869,
+	"last_update": 1572315746017,
 	"output": [
 		{
 			"args": {},
-			"calls": 83094,
+			"calls": 149943,
 			"base": "Flip a coin! heads wins, tails loses. {flip:true}",
 			"fragments": [
 				"iled ",
@@ -67,6 +66,6 @@
 			]
 		}
 	],
-	"updt": 1572314981127,
-	"edit": 1
+	"updt": 1572315657249,
+	"edit": 3
 }
