--- a/unknown_isjxk0.db.json
+++ b/unknown_isjxk0.db.json
@@ -1,25 +1,25 @@
 {
 	"_id": "unknown_isjxk0.db",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "unknown_isjxk0.db",
 	"sector": "K_7503",
 	"sec_level": 4,
 	"date_added": 1572314539421,
-	"last_scraped": 1572317753698,
+	"last_scraped": 1572319895869,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1572314539421
 		}
 	],
-	"next_scrape": 1572359661073,
+	"next_scrape": 1572362339798,
 	"category": "coin_flipper",
-	"last_update": 1572317753698,
+	"last_update": 1572319895869,
 	"output": [
 		{
 			"args": {},
-			"calls": 156625,
+			"calls": 167849,
 			"base": "Flip a coin! heads wins, tails loses. {flip:true}",
 			"fragments": [
 				"iled ",
@@ -66,6 +66,6 @@
 			]
 		}
 	],
-	"updt": 1572315881391,
-	"edit": 4
+	"updt": 1572317911782,
+	"edit": 5
 }
