--- a/unknown_m7tgce.bot_scam_do_not_run.json
+++ b/unknown_m7tgce.bot_scam_do_not_run.json
@@ -1,7 +1,7 @@
 {
 	"_id": "unknown_m7tgce.bot_scam_do_not_run",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "dead",
 	"script": "unknown_m7tgce.bot_scam_do_not_run",
 	"sector": "HJG_2788",
 	"sec_level": 4,
@@ -11,6 +11,10 @@
 		{
 			"type": "added",
 			"when": 1563165639066
+		},
+		{
+			"type": "died",
+			"when": 1572323749041
 		}
 	],
 	"next_scrape": 1570787730635,
@@ -141,8 +145,8 @@
 			]
 		}
 	],
-	"updt": 1570736725528,
-	"edit": 29,
+	"updt": 1570745972332,
+	"edit": 30,
 	"retry_args": [
 		{
 			"CLICK": true
