--- a/unknown_m7tgce.k.json
+++ b/unknown_m7tgce.k.json
@@ -1,7 +1,7 @@
 {
 	"_id": "unknown_m7tgce.k",
 	"type": "fragment",
-	"mode": "fresh",
+	"mode": "dead",
 	"script": "unknown_m7tgce.k",
 	"sector": "SPC_9156",
 	"sec_level": 4,
@@ -11,6 +11,10 @@
 		{
 			"type": "added",
 			"when": 1572295574796
+		},
+		{
+			"type": "died",
+			"when": 1572323766890
 		}
 	],
 	"scrape_ct": 9,
@@ -118,8 +122,8 @@
 			]
 		}
 	],
-	"updt": 1572295592831,
-	"edit": 1,
+	"updt": 1572296043479,
+	"edit": 2,
 	"identified": [
 		{
 			"document": "MFT0XBF_CLST0X7A_SECT0XF227_FILE0X2BC7D171",
