--- a/unknown_0axb7v.loic.json
+++ b/unknown_0axb7v.loic.json
@@ -1,27 +1,27 @@
 {
 	"_id": "unknown_0axb7v.loic",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "timeout",
 	"script": "unknown_0axb7v.loic",
 	"sector": "SPC_8152",
 	"sec_level": 4,
 	"date_added": 1571531842311,
-	"last_scraped": 1572323862166,
+	"last_scraped": 1572326294264,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1571531842311
 		}
 	],
-	"updt": 1572321519000,
-	"edit": 316,
-	"next_scrape": 1572364534997,
+	"updt": 1572323998995,
+	"edit": 317,
+	"next_scrape": 1572371639233,
 	"category": "plant_sim",
-	"last_update": 1572323862166,
+	"last_update": 1572326294264,
 	"output": [
 		{
 			"args": {},
-			"calls": 284972,
+			"calls": 285500,
 			"base": "c:\"j04yl2\" d:\"<f l n s w>\"\n\n\n\n\n\n\n\n          ~~~~~~~~~~~~~~",
 			"fragments": [
 				"ty in",
