--- a/derelict_nnxezh.pleas_donot_run.json
+++ b/derelict_nnxezh.pleas_donot_run.json
@@ -1,26 +1,25 @@
 {
 	"_id": "derelict_nnxezh.pleas_donot_run",
 	"type": "fragment",
-	"mode": "fresh",
+	"mode": "npc",
 	"script": "derelict_nnxezh.pleas_donot_run",
 	"sector": "K_7503",
 	"sec_level": 4,
 	"date_added": 1572339051034,
-	"last_scraped": 1572339512893,
+	"last_scraped": 1572340367890,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1572339051034
 		}
 	],
-	"scrape_ct": 11,
-	"next_scrape": 1572339572893,
+	"next_scrape": 1572384747009,
 	"category": "plant_sim",
-	"last_update": 1572339512893,
+	"last_update": 1572340367890,
 	"output": [
 		{
 			"args": {},
-			"calls": 6196,
+			"calls": 14084,
 			"base": "c:\"35jidh\" d:\"<f l n s w>\"\n\n\n\n\n\n\n\n          ~~~~~~~~~~~~~~",
 			"fragments": [
 				"0X75_",
@@ -79,6 +78,6 @@
 			]
 		}
 	],
-	"updt": 1572339108225,
-	"edit": 1
+	"updt": 1572340238955,
+	"edit": 5
 }
