--- a/unknown_l7crzq.blib.json
+++ b/unknown_l7crzq.blib.json
@@ -6,21 +6,21 @@
 	"sector": "K_7503",
 	"sec_level": 4,
 	"date_added": 1572367493281,
-	"last_scraped": 1572367544226,
+	"last_scraped": 1572368466544,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1572367493281
 		}
 	],
-	"scrape_ct": 18,
-	"next_scrape": 1572367604226,
+	"scrape_ct": 0,
+	"next_scrape": 1572368526544,
 	"category": "fishie_tank",
-	"last_update": 1572367544226,
+	"last_update": 1572368486821,
 	"output": [
 		{
 			"args": {},
-			"calls": 7682,
+			"calls": 66788,
 			"base": "Some fishies are in the tank. They are swimming. and hungry?\ndo:\"feed\" | do:\"clean\"",
 			"fragments": [
 				"d card",
@@ -50,7 +50,7 @@
 			"args": {
 				"do": "feed"
 			},
-			"calls": 567,
+			"calls": 7388,
 			"base": [
 				"Fishies are happy.",
 				"actuly they look fine",
@@ -85,7 +85,7 @@
 			"args": {
 				"do": "clean"
 			},
-			"calls": 8320,
+			"calls": 61612,
 			"base": "Fishies are happy. Algea eaters are displeased.",
 			"fragments": [
 				"d card",
@@ -124,6 +124,13 @@
 				"ile\\n216D",
 				"ards\\n216"
 			]
+		}
+	],
+	"updt": 1572368270299,
+	"edit": 3,
+	"retry_args": [
+		{
+			"do": "clean"
 		}
 	]
 }
