--- a/unknown_l7crzq.blib.json
+++ b/unknown_l7crzq.blib.json
@@ -1,22 +1,21 @@
 {
 	"_id": "unknown_l7crzq.blib",
 	"type": "fragment",
-	"mode": "fresh",
+	"mode": "npc",
 	"script": "unknown_l7crzq.blib",
 	"sector": "K_7503",
 	"sec_level": 4,
 	"date_added": 1572367493281,
-	"last_scraped": 1572368466544,
+	"last_scraped": 1572368498446,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1572367493281
 		}
 	],
-	"scrape_ct": 0,
-	"next_scrape": 1572368526544,
+	"next_scrape": 1572412497703,
 	"category": "fishie_tank",
-	"last_update": 1572368486821,
+	"last_update": 1572368498446,
 	"output": [
 		{
 			"args": {},
@@ -85,7 +84,7 @@
 			"args": {
 				"do": "clean"
 			},
-			"calls": 61612,
+			"calls": 65212,
 			"base": "Fishies are happy. Algea eaters are displeased.",
 			"fragments": [
 				"d card",
@@ -126,11 +125,6 @@
 			]
 		}
 	],
-	"updt": 1572368270299,
-	"edit": 3,
-	"retry_args": [
-		{
-			"do": "clean"
-		}
-	]
+	"updt": 1572368495962,
+	"edit": 4
 }
