--- a/unknown_k6v220.priv_6ankeg.json
+++ b/unknown_k6v220.priv_6ankeg.json
@@ -1,7 +1,7 @@
 {
 	"_id": "unknown_k6v220.priv_6ankeg",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "dead",
 	"script": "unknown_k6v220.priv_6ankeg",
 	"sector": "K_7243",
 	"sec_level": 1,
@@ -19,8 +19,12 @@
 				"from": "K_7243",
 				"to": "K_1215"
 			}
-		]
+		],
+		{
+			"type": "died",
+			"when": 1572397160386
+		}
 	],
-	"updt": 1560612164995,
-	"edit": 1
+	"updt": 1564544279169,
+	"edit": 2
 }
