--- a/unknown_8a27qh.casino.json
+++ b/unknown_8a27qh.casino.json
@@ -6,21 +6,21 @@
 	"sector": "K_9443",
 	"sec_level": 4,
 	"date_added": 1572412300856,
-	"last_scraped": 1572412420084,
+	"last_scraped": 1572413364951,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1572412300856
 		}
 	],
-	"scrape_ct": 17,
-	"next_scrape": 1572412480084,
+	"scrape_ct": 1,
+	"next_scrape": 1572413424951,
 	"category": "coin_flipper",
-	"last_update": 1572412420084,
+	"last_update": 1572413285202,
 	"output": [
 		{
 			"args": {},
-			"calls": 22889,
+			"calls": 104376,
 			"base": "Flip a coin! heads wins, tails loses. {flip:true}",
 			"fragments": [
 				"ed wh",
@@ -54,5 +54,7 @@
 				"aive eno"
 			]
 		}
-	]
+	],
+	"updt": 1572413142487,
+	"edit": 3
 }
