--- a/unknown_8a27qh.casino.json
+++ b/unknown_8a27qh.casino.json
@@ -1,26 +1,25 @@
 {
 	"_id": "unknown_8a27qh.casino",
 	"type": "fragment",
-	"mode": "fresh",
+	"mode": "npc",
 	"script": "unknown_8a27qh.casino",
 	"sector": "K_9443",
 	"sec_level": 4,
 	"date_added": 1572412300856,
-	"last_scraped": 1572413364951,
+	"last_scraped": 1572413517919,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1572412300856
 		}
 	],
-	"scrape_ct": 1,
-	"next_scrape": 1572413424951,
+	"next_scrape": 1572453475813,
 	"category": "coin_flipper",
-	"last_update": 1572413285202,
+	"last_update": 1572413517919,
 	"output": [
 		{
 			"args": {},
-			"calls": 104376,
+			"calls": 124343,
 			"base": "Flip a coin! heads wins, tails loses. {flip:true}",
 			"fragments": [
 				"ed wh",
