--- a/uknown_rvj16y.z.json
+++ b/uknown_rvj16y.z.json
@@ -1,26 +1,25 @@
 {
 	"_id": "uknown_rvj16y.z",
 	"type": "fragment",
-	"mode": "fresh",
+	"mode": "npc",
 	"script": "uknown_rvj16y.z",
 	"sector": "K_2894",
 	"sec_level": 4,
 	"date_added": 1572428110723,
-	"last_scraped": 1572428673768,
+	"last_scraped": 1572429255280,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1572428110723
 		}
 	],
-	"scrape_ct": 12,
-	"next_scrape": 1572428733768,
+	"next_scrape": 1572470620820,
 	"category": "plant_sim",
-	"last_update": 1572428673768,
+	"last_update": 1572429255280,
 	"output": [
 		{
 			"args": {},
-			"calls": 5348,
+			"calls": 13326,
 			"base": "c:\"5q9f6w\" d:\"<f l n s w>\"\n\n\n\n\n\n                 \n                 .\n                 ",
 			"fragments": [
 				" wind",
@@ -67,6 +66,6 @@
 			]
 		}
 	],
-	"updt": 1572428473980,
-	"edit": 2
+	"updt": 1572429150675,
+	"edit": 4
 }
