--- a/uknown_fw8224.decorruptor.json
+++ b/uknown_fw8224.decorruptor.json
@@ -6,21 +6,21 @@
 	"sector": "NGC_8071",
 	"sec_level": 4,
 	"date_added": 1572437420308,
-	"last_scraped": 1572437430940,
+	"last_scraped": 1572438616483,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1572437420308
 		}
 	],
-	"scrape_ct": 20,
-	"next_scrape": 1572437490940,
+	"scrape_ct": 0,
+	"next_scrape": 1572438676483,
 	"category": "dice_roller",
-	"last_update": 1572437430940,
+	"last_update": 1572438616483,
 	"output": [
 		{
 			"args": {},
-			"calls": 6316,
+			"calls": 108001,
 			"base": "Roll the dice!(tm)\n\nbeat the house's roll to win! {roll:true}",
 			"fragments": [
 				"tanda",
@@ -66,5 +66,7 @@
 				"## we're"
 			]
 		}
-	]
+	],
+	"updt": 1572438397817,
+	"edit": 4
 }
