--- a/uknown_fw8224.decorruptor.json
+++ b/uknown_fw8224.decorruptor.json
@@ -1,26 +1,25 @@
 {
 	"_id": "uknown_fw8224.decorruptor",
 	"type": "fragment",
-	"mode": "fresh",
+	"mode": "npc",
 	"script": "uknown_fw8224.decorruptor",
 	"sector": "NGC_8071",
 	"sec_level": 4,
 	"date_added": 1572437420308,
-	"last_scraped": 1572438616483,
+	"last_scraped": 1572438706618,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1572437420308
 		}
 	],
-	"scrape_ct": 0,
-	"next_scrape": 1572438676483,
+	"next_scrape": 1572479500797,
 	"category": "dice_roller",
-	"last_update": 1572438616483,
+	"last_update": 1572438706618,
 	"output": [
 		{
 			"args": {},
-			"calls": 108001,
+			"calls": 120920,
 			"base": "Roll the dice!(tm)\n\nbeat the house's roll to win! {roll:true}",
 			"fragments": [
 				"tanda",
@@ -67,6 +66,6 @@
 			]
 		}
 	],
-	"updt": 1572438397817,
-	"edit": 4
+	"updt": 1572438623213,
+	"edit": 5
 }
