--- a/uknown_xcgazw.viewtest.json
+++ b/uknown_xcgazw.viewtest.json
@@ -6,20 +6,20 @@
 	"sector": "K_7825",
 	"sec_level": 4,
 	"date_added": 1572204703250,
-	"last_scraped": 1572438286567,
+	"last_scraped": 1572440525874,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1572204703250
 		}
 	],
-	"next_scrape": 1572479753089,
+	"next_scrape": 1572480575759,
 	"category": "dice_roller",
-	"last_update": 1572438286567,
+	"last_update": 1572440525874,
 	"output": [
 		{
 			"args": {},
-			"calls": 992736,
+			"calls": 1008219,
 			"base": "Roll the dice!(tm)\n\nbeat the house's roll to win! {roll:true}",
 			"fragments": [
 				" grou",
@@ -63,6 +63,6 @@
 			]
 		}
 	],
-	"updt": 1572436144943,
-	"edit": 109
+	"updt": 1572438397817,
+	"edit": 110
 }
