--- a/uknown_fw8224.decorruptor.json
+++ b/uknown_fw8224.decorruptor.json
@@ -6,29 +6,38 @@
 	"sector": "NGC_8071",
 	"sec_level": 4,
 	"date_added": 1572437420308,
-	"last_scraped": 1572445318039,
+	"last_scraped": 1572447409133,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1572437420308
 		}
 	],
-	"next_scrape": 1572491740873,
+	"next_scrape": 1572489210026,
 	"category": "dice_roller",
-	"last_update": 1572445318039,
+	"last_update": 1572447409133,
 	"output": [
 		{
 			"args": {},
-			"calls": 142391,
+			"calls": 151581,
 			"base": "Roll the dice!(tm)\n\nbeat the house's roll to win! {roll:true}",
 			"fragments": [
-				"tanda",
 				"e, er",
+				" erin",
 				"put so",
+				"ny mor",
+				"erin #",
+				"dards ",
+				"ards. ",
+				"standar",
+				"s in pl",
 				"c struc",
+				"andards",
+				" standa",
 				" ## we'",
 				" ## Sta",
 				"rin ## S",
+				"rds are ",
 				"asic str",
 				"## we're"
 			],
@@ -66,6 +75,6 @@
 			]
 		}
 	],
-	"updt": 1572443591455,
-	"edit": 8
+	"updt": 1572445395536,
+	"edit": 9
 }
