--- a/uknown_fw8224.decorruptor.json
+++ b/uknown_fw8224.decorruptor.json
@@ -6,52 +6,59 @@
 	"sector": "NGC_8071",
 	"sec_level": 4,
 	"date_added": 1572437420308,
-	"last_scraped": 1572451526230,
+	"last_scraped": 1572453666442,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1572437420308
 		}
 	],
-	"next_scrape": 1572498057790,
+	"next_scrape": 1572496187522,
 	"category": "dice_roller",
-	"last_update": 1572451526230,
+	"last_update": 1572453666442,
 	"output": [
 		{
 			"args": {},
-			"calls": 168156,
+			"calls": 173604,
 			"base": "Roll the dice!(tm)\n\nbeat the house's roll to win! {roll:true}",
 			"fragments": [
 				"some ",
 				"s put",
 				"e, er",
 				"e sta",
-				"are s",
 				" erin",
 				"put so",
-				"ny mor",
 				"erin #",
 				"dards ",
 				"ce. ##",
 				" any m",
+				"tures i",
 				"standar",
 				"s in pl",
+				"ome bas",
+				"o put s",
 				"not dev",
+				"n place",
+				"e. ## w",
 				"c struc",
 				"andards",
 				" standa",
+				" are st",
 				" ## we'",
 				" ## Sta",
+				"s. This ",
 				"ructures",
 				"rin ## S",
 				"res in p",
 				"rds. Thi",
 				"rds are ",
+				"ny more,",
 				"dards. T",
 				"asic str",
 				"ards are",
 				"## we're",
 				"## Stand",
+				"# we're ",
 				" structu",
 				" This pu"
 			],
@@ -89,6 +96,6 @@
 			]
 		}
 	],
-	"updt": 1572449684077,
-	"edit": 11
+	"updt": 1572451713765,
+	"edit": 12
 }
