--- a/uknown_fw8224.decorruptor.json
+++ b/uknown_fw8224.decorruptor.json
@@ -6,33 +6,35 @@
 	"sector": "NGC_8071",
 	"sec_level": 4,
 	"date_added": 1572437420308,
-	"last_scraped": 1572455664632,
+	"last_scraped": 1572457784606,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1572437420308
 		}
 	],
-	"next_scrape": 1572501765050,
+	"next_scrape": 1572503244840,
 	"category": "dice_roller",
-	"last_update": 1572455664632,
+	"last_update": 1572457784606,
 	"output": [
 		{
 			"args": {},
-			"calls": 181466,
+			"calls": 189184,
 			"base": "Roll the dice!(tm)\n\nbeat the house's roll to win! {roll:true}",
 			"fragments": [
 				"some ",
-				"s put",
 				"e, er",
 				"e sta",
+				", eri",
 				" erin",
+				"s puts",
 				"put so",
+				"is put",
 				"erin #",
 				"dards ",
 				"ce. ##",
+				" devs ",
 				" any m",
-				"tures i",
 				"standar",
 				"s in pl",
 				"ome bas",
@@ -40,22 +42,27 @@
 				"not dev",
 				"n place",
 				"e. ## w",
-				"c struc",
+				"any mor",
 				"andards",
 				" standa",
 				" are st",
 				" ## we'",
-				" ## Sta",
+				"we're no",
 				"s. This ",
 				"ructures",
 				"rin ## S",
 				"res in p",
+				"re not d",
 				"rds. Thi",
 				"rds are ",
 				"ny more,",
+				"n ## Sta",
+				"ic struc",
 				"dards. T",
+				"ctures i",
 				"asic str",
 				"ards are",
+				"'re not ",
 				"## we're",
 				"## Stand",
 				"# we're ",
@@ -96,6 +103,6 @@
 			]
 		}
 	],
-	"updt": 1572453744449,
-	"edit": 13
+	"updt": 1572455773443,
+	"edit": 14
 }
