--- a/uknown_fw8224.banks.json
+++ b/uknown_fw8224.banks.json
@@ -1,7 +1,7 @@
 {
 	"_id": "uknown_fw8224.banks",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "dead",
 	"script": "uknown_fw8224.banks",
 	"sector": "K_7825",
 	"sec_level": 4,
@@ -11,6 +11,10 @@
 		{
 			"type": "added",
 			"when": 1572210734365
+		},
+		{
+			"type": "died",
+			"when": 1572459040926
 		}
 	],
 	"next_scrape": 1572336397641,
@@ -63,6 +67,6 @@
 			]
 		}
 	],
-	"updt": 1572288828377,
-	"edit": 45
+	"updt": 1572291083666,
+	"edit": 46
 }
