--- a/uknown_fw8224.decorruptor.json
+++ b/uknown_fw8224.decorruptor.json
@@ -1,7 +1,7 @@
 {
 	"_id": "uknown_fw8224.decorruptor",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "dead",
 	"script": "uknown_fw8224.decorruptor",
 	"sector": "NGC_8071",
 	"sec_level": 4,
@@ -11,6 +11,10 @@
 		{
 			"type": "added",
 			"when": 1572437420308
+		},
+		{
+			"type": "died",
+			"when": 1572459019680
 		}
 	],
 	"next_scrape": 1572503244840,
@@ -103,6 +107,6 @@
 			]
 		}
 	],
-	"updt": 1572455773443,
-	"edit": 14
+	"updt": 1572457803731,
+	"edit": 15
 }
