--- a/uknown_fw8224.mitta.json
+++ b/uknown_fw8224.mitta.json
@@ -1,7 +1,7 @@
 {
 	"_id": "uknown_fw8224.mitta",
 	"type": "fragment",
-	"mode": "could not json",
+	"mode": "dead",
 	"script": "uknown_fw8224.mitta",
 	"sector": "NGC_7513",
 	"sec_level": 2,
@@ -35,10 +35,14 @@
 				"from": "NGC_7513",
 				"to": "K_7459"
 			}
-		]
+		],
+		{
+			"type": "died",
+			"when": 1572459115043
+		}
 	],
-	"updt": 1569114072498,
-	"edit": 13,
+	"updt": 1570662778651,
+	"edit": 14,
 	"scrape_ct": 17,
 	"next_scrape": 1569108172383,
 	"category": "UNKNOWN CATEGORY",
