--- a/uknown_txwe1r.helpdesk.json
+++ b/uknown_txwe1r.helpdesk.json
@@ -6,20 +6,20 @@
 	"sector": "VNP_8698",
 	"sec_level": 4,
 	"date_added": 1572230758655,
-	"last_scraped": 1572459852611,
+	"last_scraped": 1572461882288,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1572230758655
 		}
 	],
-	"next_scrape": 1572504460719,
+	"next_scrape": 1572504063880,
 	"category": "coin_flipper",
-	"last_update": 1572459852611,
+	"last_update": 1572461882288,
 	"output": [
 		{
 			"args": {},
-			"calls": 999450,
+			"calls": 1006547,
 			"base": "Flip a coin! heads wins, tails loses. {flip:true}",
 			"fragments": [
 				"ST0X7",
@@ -60,6 +60,6 @@
 			]
 		}
 	],
-	"updt": 1572457803731,
-	"edit": 110
+	"updt": 1572460061207,
+	"edit": 111
 }
