--- a/unknown_ss8xri.bot_scam_do_not_run.json
+++ b/unknown_ss8xri.bot_scam_do_not_run.json
@@ -1,22 +1,22 @@
 {
 	"_id": "unknown_ss8xri.bot_scam_do_not_run",
 	"type": "fragment",
-	"mode": "fresh",
+	"mode": "skip",
 	"script": "unknown_ss8xri.bot_scam_do_not_run",
 	"sector": "NGC_3960",
 	"sec_level": 4,
 	"date_added": 1572474557368,
-	"last_scraped": 1572474717914,
+	"last_scraped": 1572474726745,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1572474557368
 		}
 	],
-	"scrape_ct": 15,
-	"next_scrape": 1572474777914,
+	"scrape_ct": 14,
+	"next_scrape": 1572474786745,
 	"category": "fishie_tank",
-	"last_update": 1572474706130,
+	"last_update": 1572474726745,
 	"output": [
 		{
 			"args": {},
@@ -85,7 +85,7 @@
 			"args": {
 				"do": "clean"
 			},
-			"calls": 8966,
+			"calls": 17465,
 			"base": "Fishies are happy. Algea eaters are displeased.",
 			"fragments": [
 				"us. Ne",
