--- a/derelict_nnxezh.pleas_donot_run.json
+++ b/derelict_nnxezh.pleas_donot_run.json
@@ -6,30 +6,36 @@
 	"sector": "K_7503",
 	"sec_level": 4,
 	"date_added": 1572339051034,
-	"last_scraped": 1572484089396,
+	"last_scraped": 1572486219837,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1572339051034
 		}
 	],
-	"next_scrape": 1572525294515,
+	"next_scrape": 1572530158066,
 	"category": "plant_sim",
-	"last_update": 1572484089396,
+	"last_update": 1572486219837,
 	"output": [
 		{
 			"args": {},
-			"calls": 73128,
+			"calls": 75400,
 			"base": "c:\"35jidh\" d:\"<f l n s w>\"\n\n\n\n\n\n\n\n          ~~~~~~~~~~~~~~",
 			"fragments": [
+				"ndari",
+				"5_SEC",
 				"0X75_",
 				"w. I c",
+				"ually ",
 				"s out ",
-				"ieve I",
 				"g for ",
 				"e of y",
+				"CB5E95",
 				" from ",
+				" ERROR",
+				"ieve I'",
 				"T0X73F7",
+				"R | USE",
 				"ERROR |",
 				" | USER",
 				"OR | NET",
@@ -78,6 +84,6 @@
 			]
 		}
 	],
-	"updt": 1572482166460,
-	"edit": 71
+	"updt": 1572484198158,
+	"edit": 72
 }
