--- a/uknown_xb5p8t.bot_brain.json
+++ b/uknown_xb5p8t.bot_brain.json
@@ -1,7 +1,7 @@
 {
 	"_id": "uknown_xb5p8t.bot_brain",
 	"type": "fragment",
-	"mode": "could not json",
+	"mode": "dead",
 	"script": "uknown_xb5p8t.bot_brain",
 	"sector": "VNP_9534",
 	"sec_level": 4,
@@ -11,10 +11,14 @@
 		{
 			"type": "added",
 			"when": 1569085645113
+		},
+		{
+			"type": "died",
+			"when": 1572493324063
 		}
 	],
-	"updt": 1569088138631,
-	"edit": 2,
+	"updt": 1570602353583,
+	"edit": 3,
 	"scrape_ct": 20,
 	"next_scrape": 1570690135857,
 	"category": "risk_factor",
