--- a/uknown_xb5p8t.mud.json
+++ b/uknown_xb5p8t.mud.json
@@ -1,7 +1,7 @@
 {
 	"_id": "uknown_xb5p8t.mud",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "dead",
 	"script": "uknown_xb5p8t.mud",
 	"sector": "VNP_3290",
 	"sec_level": 4,
@@ -11,6 +11,10 @@
 		{
 			"type": "added",
 			"when": 1564665103923
+		},
+		{
+			"type": "died",
+			"when": 1572493324063
 		}
 	],
 	"next_scrape": 1570839986973,
@@ -143,6 +147,6 @@
 			]
 		}
 	],
-	"updt": 1570799428063,
-	"edit": 152
+	"updt": 1570799653552,
+	"edit": 153
 }
