--- a/uknown_x08osf.bot_scam_do_not_run.json
+++ b/uknown_x08osf.bot_scam_do_not_run.json
@@ -1,28 +1,27 @@
 {
 	"_id": "uknown_x08osf.bot_scam_do_not_run",
 	"type": "fragment",
-	"mode": "fresh",
+	"mode": "npc",
 	"script": "uknown_x08osf.bot_scam_do_not_run",
 	"sector": "K_9844",
 	"sec_level": 4,
 	"date_added": 1572516454740,
-	"last_scraped": 1572516895517,
+	"last_scraped": 1572517538070,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1572516454740
 		}
 	],
-	"updt": 1572516685763,
-	"edit": 2,
-	"scrape_ct": 10,
-	"next_scrape": 1572516955517,
+	"updt": 1572517361594,
+	"edit": 5,
+	"next_scrape": 1572557970049,
 	"category": "dice_roller",
-	"last_update": 1572516895517,
+	"last_update": 1572517538070,
 	"output": [
 		{
 			"args": {},
-			"calls": 60717,
+			"calls": 127859,
 			"base": "Roll the dice!(tm)\n\nbeat the house's roll to win! {roll:true}",
 			"fragments": [
 				"ole i",
