--- a/uknown_c671te.flood.json
+++ b/uknown_c671te.flood.json
@@ -6,21 +6,21 @@
 	"sector": "K_9844",
 	"sec_level": 4,
 	"date_added": 1572526732492,
-	"last_scraped": 1572526813374,
+	"last_scraped": 1572527677147,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1572526732492
 		}
 	],
-	"scrape_ct": 19,
-	"next_scrape": 1572526873374,
+	"scrape_ct": 2,
+	"next_scrape": 1572527737147,
 	"category": "plant_sim",
-	"last_update": 1572526813374,
+	"last_update": 1572527677147,
 	"output": [
 		{
 			"args": {},
-			"calls": 1297,
+			"calls": 10720,
 			"base": "c:\"51m589\" d:\"<f l n s w>\"\n6*\n\n\n\n               \n                Ã\n               ÁÁÁÁ\n                ÁÃ\n               ",
 			"fragments": [
 				"SECT0",
@@ -60,5 +60,7 @@
 				"D03216E "
 			]
 		}
-	]
+	],
+	"updt": 1572527513131,
+	"edit": 4
 }
