--- a/uknown_c671te.flood.json
+++ b/uknown_c671te.flood.json
@@ -1,26 +1,25 @@
 {
 	"_id": "uknown_c671te.flood",
 	"type": "fragment",
-	"mode": "fresh",
+	"mode": "npc",
 	"script": "uknown_c671te.flood",
 	"sector": "K_9844",
 	"sec_level": 4,
 	"date_added": 1572526732492,
-	"last_scraped": 1572527677147,
+	"last_scraped": 1572527839004,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1572526732492
 		}
 	],
-	"scrape_ct": 2,
-	"next_scrape": 1572527737147,
+	"next_scrape": 1572568255371,
 	"category": "plant_sim",
-	"last_update": 1572527677147,
+	"last_update": 1572527839004,
 	"output": [
 		{
 			"args": {},
-			"calls": 10720,
+			"calls": 12594,
 			"base": "c:\"51m589\" d:\"<f l n s w>\"\n6*\n\n\n\n               \n                Ã\n               ÁÁÁÁ\n                ÁÃ\n               ",
 			"fragments": [
 				"SECT0",
@@ -61,6 +60,6 @@
 			]
 		}
 	],
-	"updt": 1572527513131,
-	"edit": 4
+	"updt": 1572527739843,
+	"edit": 5
 }
