--- a/derelict_nnxezh.pleas_donot_run.json
+++ b/derelict_nnxezh.pleas_donot_run.json
@@ -6,41 +6,49 @@
 	"sector": "K_7503",
 	"sec_level": 4,
 	"date_added": 1572339051034,
-	"last_scraped": 1572539575420,
+	"last_scraped": 1572542085893,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1572339051034
 		}
 	],
-	"next_scrape": 1572580515920,
+	"next_scrape": 1572587018397,
 	"category": "plant_sim",
-	"last_update": 1572539575420,
+	"last_update": 1572542085893,
 	"output": [
 		{
 			"args": {},
-			"calls": 97714,
+			"calls": 99292,
 			"base": "c:\"35jidh\" d:\"<f l n s w>\"\n\n\n\n\n\n\n\n          ~~~~~~~~~~~~~~",
 			"fragments": [
+				"sage ",
 				"ndari",
-				"5_SEC",
+				"extnl",
+				"an't ",
 				"0X75_",
 				"w. I c",
 				"ually ",
 				"s out ",
+				"his ou",
 				"g for ",
 				"e of y",
+				"ddr er",
 				"CB5E95",
 				" from ",
-				" ERROR",
 				"ieve I'",
+				"X75_SEC",
 				"T0X73F7",
 				"R | USE",
-				"ERROR |",
 				" | USER",
+				"were loo",
+				"USER ext",
+				"T ERROR ",
 				"OR | NET",
 				"J: That ",
-				"BODY E -"
+				"BODY E -",
+				" ERROR |",
+				"B5E952\\nS"
 			],
 			"hits": [
 				{
@@ -84,6 +92,6 @@
 			]
 		}
 	],
-	"updt": 1572537433338,
-	"edit": 96
+	"updt": 1572539691784,
+	"edit": 97
 }
