--- a/unknown_0pkjh3.r.json
+++ b/unknown_0pkjh3.r.json
@@ -1,7 +1,7 @@
 {
 	"_id": "unknown_0pkjh3.r",
 	"type": "fragment",
-	"mode": "could not json",
+	"mode": "dead",
 	"script": "unknown_0pkjh3.r",
 	"sector": "HJG_4648",
 	"sec_level": 2,
@@ -11,6 +11,12 @@
 		{
 			"type": "added",
 			"when": 1572539373870
+		},
+		{
+			"type": "died",
+			"when": 1572542006086
 		}
-	]
+	],
+	"updt": 1572539466730,
+	"edit": 1
 }
