--- a/unknown_0pkjh3.trust.json
+++ b/unknown_0pkjh3.trust.json
@@ -1,7 +1,7 @@
 {
 	"_id": "unknown_0pkjh3.trust",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "dead",
 	"script": "unknown_0pkjh3.trust",
 	"sector": "K_7459",
 	"sec_level": 4,
@@ -11,6 +11,10 @@
 		{
 			"type": "added",
 			"when": 1564357522436
+		},
+		{
+			"type": "died",
+			"when": 1572541776278
 		}
 	],
 	"next_scrape": 1571147795879,
@@ -84,6 +88,6 @@
 			]
 		}
 	],
-	"updt": 1571101240187,
-	"edit": 226
+	"updt": 1571106202796,
+	"edit": 227
 }
