--- a/unknown_qjibis.grep.json
+++ b/unknown_qjibis.grep.json
@@ -1,25 +1,25 @@
 {
 	"_id": "unknown_qjibis.grep",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "unknown_qjibis.grep",
 	"sector": "K_9844",
 	"sec_level": 4,
 	"date_added": 1572534108625,
-	"last_scraped": 1572538911014,
+	"last_scraped": 1572541383032,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1572534108625
 		}
 	],
-	"next_scrape": 1572579564017,
+	"next_scrape": 1572583145040,
 	"category": "clicker",
-	"last_update": 1572538911014,
+	"last_update": 1572541383032,
 	"output": [
 		{
 			"args": {},
-			"calls": 60237,
+			"calls": 67372,
 			"base": "~~ `NCLICKER` `hGENERIC` `JRUSH` `HEX` `IPLUS` `DGAMMA` ~~\n\n`NCLICK` FOR `ICLICKS`\n`NCLICK` FOR `DGLORY`",
 			"fragments": [
 				"d | BO",
@@ -51,7 +51,7 @@
 			"args": {
 				"click": true
 			},
-			"calls": 52450,
+			"calls": 61132,
 			"base": "I CANT HEAR YOU! `NCLICK` HARDER",
 			"fragments": [
 				"d | BO",
@@ -83,7 +83,7 @@
 			"args": {
 				"CLICK": true
 			},
-			"calls": 7149,
+			"calls": 8143,
 			"base": "`LCLICK SECURED`",
 			"fragments": [
 				"d | BO",
@@ -196,6 +196,6 @@
 			]
 		}
 	],
-	"updt": 1572536757736,
-	"edit": 4
+	"updt": 1572539013808,
+	"edit": 5
 }
