--- a/uknown_3d85sy.pincracker.json
+++ b/uknown_3d85sy.pincracker.json
@@ -6,21 +6,21 @@
 	"sector": "SPC_9859",
 	"sec_level": 4,
 	"date_added": 1572548465405,
-	"last_scraped": 1572548487080,
+	"last_scraped": 1572549349886,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1572548465405
 		}
 	],
-	"scrape_ct": 19,
-	"next_scrape": 1572548547080,
+	"scrape_ct": 5,
+	"next_scrape": 1572549409886,
 	"category": "dice_roller",
-	"last_update": 1572548477149,
+	"last_update": 1572549349886,
 	"output": [
 		{
 			"args": {},
-			"calls": 6608,
+			"calls": 89007,
 			"base": "Roll the dice!(tm)\n\nbeat the house's roll to win! {roll:true}",
 			"fragments": [
 				"someti",
@@ -30,7 +30,37 @@
 				"soners. ",
 				"ometimes",
 				"all pris"
+			],
+			"hits": [
+				{
+					"document": "Prisoners",
+					"frags": [
+						"someti",
+						"ows it",
+						"ferent",
+						"allory'",
+						"soners. ",
+						"ometimes",
+						"all pris"
+					]
+				}
 			]
 		}
-	]
+	],
+	"identified": [
+		{
+			"document": "Prisoners",
+			"frags": [
+				"someti",
+				"ows it",
+				"ferent",
+				"allory'",
+				"soners. ",
+				"ometimes",
+				"all pris"
+			]
+		}
+	],
+	"updt": 1572549167714,
+	"edit": 3
 }
