--- a/uknown_3d85sy.pincracker.json
+++ b/uknown_3d85sy.pincracker.json
@@ -1,26 +1,25 @@
 {
 	"_id": "uknown_3d85sy.pincracker",
 	"type": "fragment",
-	"mode": "fresh",
+	"mode": "npc",
 	"script": "uknown_3d85sy.pincracker",
 	"sector": "SPC_9859",
 	"sec_level": 4,
 	"date_added": 1572548465405,
-	"last_scraped": 1572549349886,
+	"last_scraped": 1572549742115,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1572548465405
 		}
 	],
-	"scrape_ct": 5,
-	"next_scrape": 1572549409886,
+	"next_scrape": 1572594661633,
 	"category": "dice_roller",
-	"last_update": 1572549349886,
+	"last_update": 1572549742115,
 	"output": [
 		{
 			"args": {},
-			"calls": 89007,
+			"calls": 124505,
 			"base": "Roll the dice!(tm)\n\nbeat the house's roll to win! {roll:true}",
 			"fragments": [
 				"someti",
@@ -61,6 +60,6 @@
 			]
 		}
 	],
-	"updt": 1572549167714,
-	"edit": 3
+	"updt": 1572549619272,
+	"edit": 5
 }
