--- a/unknown_3intkd.db.json
+++ b/unknown_3intkd.db.json
@@ -6,21 +6,21 @@
 	"sector": "HJG_0007",
 	"sec_level": 4,
 	"date_added": 1572557290178,
-	"last_scraped": 1572557510426,
+	"last_scraped": 1572558393808,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1572557290178
 		}
 	],
-	"scrape_ct": 17,
-	"next_scrape": 1572557570426,
+	"scrape_ct": 2,
+	"next_scrape": 1572558453808,
 	"category": "coin_flipper",
-	"last_update": 1572557439159,
+	"last_update": 1572558393808,
 	"output": [
 		{
 			"args": {},
-			"calls": 19602,
+			"calls": 117111,
 			"base": "Flip a coin! heads wins, tails loses. {flip:true}",
 			"fragments": [
 				"77 of",
@@ -60,5 +60,7 @@
 				"d pile\\n2"
 			]
 		}
-	]
+	],
+	"updt": 1572558192120,
+	"edit": 3
 }
