--- a/unknown_3intkd.db.json
+++ b/unknown_3intkd.db.json
@@ -1,26 +1,25 @@
 {
 	"_id": "unknown_3intkd.db",
 	"type": "fragment",
-	"mode": "fresh",
+	"mode": "npc",
 	"script": "unknown_3intkd.db",
 	"sector": "HJG_0007",
 	"sec_level": 4,
 	"date_added": 1572557290178,
-	"last_scraped": 1572558393808,
+	"last_scraped": 1572558625236,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1572557290178
 		}
 	],
-	"scrape_ct": 2,
-	"next_scrape": 1572558453808,
+	"next_scrape": 1572603838165,
 	"category": "coin_flipper",
-	"last_update": 1572558393808,
+	"last_update": 1572558625236,
 	"output": [
 		{
 			"args": {},
-			"calls": 117111,
+			"calls": 142056,
 			"base": "Flip a coin! heads wins, tails loses. {flip:true}",
 			"fragments": [
 				"77 of",
@@ -61,6 +60,6 @@
 			]
 		}
 	],
-	"updt": 1572558192120,
-	"edit": 3
+	"updt": 1572558418355,
+	"edit": 4
 }
