--- a/unknown_yv2hdz.play.json
+++ b/unknown_yv2hdz.play.json
@@ -1,26 +1,25 @@
 {
 	"_id": "unknown_yv2hdz.play",
 	"type": "fragment",
-	"mode": "fresh",
+	"mode": "npc",
 	"script": "unknown_yv2hdz.play",
 	"sector": "HJG_0007",
 	"sec_level": 4,
 	"date_added": 1572562303224,
-	"last_scraped": 1572562634084,
+	"last_scraped": 1572563367310,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1572562303224
 		}
 	],
-	"scrape_ct": 13,
-	"next_scrape": 1572562694084,
+	"next_scrape": 1572603278360,
 	"category": "dice_roller",
-	"last_update": 1572562634084,
+	"last_update": 1572563367310,
 	"output": [
 		{
 			"args": {},
-			"calls": 45275,
+			"calls": 122913,
 			"base": "Roll the dice!(tm)\n\nbeat the house's roll to win! {roll:true}",
 			"fragments": [
 				" depl",
@@ -70,5 +69,7 @@
 				" soluti"
 			]
 		}
-	]
+	],
+	"updt": 1572563150608,
+	"edit": 3
 }
