--- a/uknown_rvj16y.z.json
+++ b/uknown_rvj16y.z.json
@@ -6,16 +6,16 @@
 	"sector": "K_2894",
 	"sec_level": 4,
 	"date_added": 1572428110723,
-	"last_scraped": 1572565637950,
+	"last_scraped": 1572568031759,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1572428110723
 		}
 	],
-	"next_scrape": 1572608086895,
+	"next_scrape": 1572610438944,
 	"category": "plant_sim",
-	"last_update": 1572565637950,
+	"last_update": 1572568031759,
 	"output": [
 		{
 			"args": {},
@@ -48,6 +48,22 @@
 					]
 				}
 			]
+		},
+		{
+			"args": {},
+			"calls": 692,
+			"base": "c:\"5q9f6w\" d:\"<f l n s w>\"\n\n\n\n\n\n                 \n                 Ã\n                 ",
+			"fragments": [
+				" wind",
+				"t, you",
+				"ng win",
+				"ing wi",
+				"e I co",
+				"window?",
+				"213D Of ",
+				"you.\\n213",
+				"ld,\\n213E"
+			]
 		}
 	],
 	"identified": [
@@ -66,6 +82,6 @@
 			]
 		}
 	],
-	"updt": 1572563150608,
-	"edit": 67
+	"updt": 1572565856122,
+	"edit": 68
 }
