--- a/unknown_yv2hdz.play.json
+++ b/unknown_yv2hdz.play.json
@@ -6,27 +6,33 @@
 	"sector": "HJG_0007",
 	"sec_level": 4,
 	"date_added": 1572562303224,
-	"last_scraped": 1572565841688,
+	"last_scraped": 1572568232884,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1572562303224
 		}
 	],
-	"next_scrape": 1572609320303,
+	"next_scrape": 1572607983507,
 	"category": "dice_roller",
-	"last_update": 1572565841688,
+	"last_update": 1572568232884,
 	"output": [
 		{
 			"args": {},
-			"calls": 129924,
+			"calls": 136533,
 			"base": "Roll the dice!(tm)\n\nbeat the house's roll to win! {roll:true}",
 			"fragments": [
-				" depl",
+				"ntell",
+				"west.\"",
+				"that i",
 				"hina's",
 				"gests ",
 				"deploy",
+				"gent lo",
+				"ee depl",
+				"cs solu",
 				" soluti",
+				"sts that",
 				"a's 'Bo ",
 				" the wes"
 			],
@@ -70,6 +76,6 @@
 			]
 		}
 	],
-	"updt": 1572563376584,
-	"edit": 4
+	"updt": 1572565856122,
+	"edit": 5
 }
