--- a/uknown_z6s9es.sys_expose_upgrades.json
+++ b/uknown_z6s9es.sys_expose_upgrades.json
@@ -1,26 +1,25 @@
 {
 	"_id": "uknown_z6s9es.sys_expose_upgrades",
 	"type": "fragment",
-	"mode": "fresh",
+	"mode": "npc",
 	"script": "uknown_z6s9es.sys_expose_upgrades",
 	"sector": "K_6762",
 	"sec_level": 4,
 	"date_added": 1572568614596,
-	"last_scraped": 1572568966388,
+	"last_scraped": 1572569900291,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1572568614596
 		}
 	],
-	"scrape_ct": 13,
-	"next_scrape": 1572569026388,
+	"next_scrape": 1572613200214,
 	"category": "dice_roller",
-	"last_update": 1572568966388,
+	"last_update": 1572569900291,
 	"output": [
 		{
 			"args": {},
-			"calls": 43754,
+			"calls": 135175,
 			"base": "Roll the dice!(tm)\n\nbeat the house's roll to win! {roll:true}",
 			"fragments": [
 				"on't ",
@@ -64,6 +63,6 @@
 			]
 		}
 	],
-	"updt": 1572568785736,
-	"edit": 1
+	"updt": 1572569689961,
+	"edit": 4
 }
