--- a/unknown_tye3md.xfer.json
+++ b/unknown_tye3md.xfer.json
@@ -1,7 +1,7 @@
 {
 	"_id": "unknown_tye3md.xfer",
 	"type": "fragment",
-	"mode": "timeout",
+	"mode": "dead",
 	"script": "unknown_tye3md.xfer",
 	"sector": "K_2748",
 	"sec_level": 4,
@@ -11,6 +11,10 @@
 		{
 			"type": "added",
 			"when": 1564063595065
+		},
+		{
+			"type": "died",
+			"when": 1572571343116
 		}
 	],
 	"scrape_ct": 19,
@@ -1610,8 +1614,8 @@
 			]
 		}
 	],
-	"updt": 1568707853594,
-	"edit": 8,
+	"updt": 1570602128402,
+	"edit": 9,
 	"pl_output": "YOU COULD WIN 2GC with do:\"win\"\n\nOR\n\nYOU COULD `VLOSE`",
 	"retry_args": [
 		{
